IntroductoryWorkshop/Step_2_DeployElasticSearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      component: elasticsearch
  template:
    metadata:
      labels:
        component: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        securityContext:
          capabilities:
            add:
              - IPC_LOCK
        # image: msegvich/k8s-es:latest
        # image: elasticsearch:6.6.1
        image: docker.elastic.co/elasticsearch/elasticsearch:6.6.1
        ports:
        - containerPort: 9200
          name: http
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: ci-data-es
      volumes:
        - name: ci-data-es
          persistentVolumeClaim:
            claimName: es-claim-pvc
      serviceAccountName: userserviceaccount
