IntroductoryWorkshop/Step_5_DeploySpringBootApp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geosearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geosearch
  template:
    metadata:
      labels:
        app: geosearch
    spec:
      containers:
      - name: geosearch-app
        image: msegvich/geosearch:ES6
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: Always
      serviceAccountName: userserviceaccount
