IntroductoryWorkshop/Step_6_ExposeSpringBootAppIngressMinikube.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress-rules
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/add-base-url: "true"
    # nginx.ingress.kubernetes.io/x-forwarded-prefix: "true"
    # nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  backend:
    serviceName:  ingress-nginx-ingress-controller
    servicePort: 8080
  rules:
  - http:
      paths:
      - path:
      # - path: /geosearch/?(.*)
        backend:
          serviceName: geosearch-service
          servicePort: http
  - http:
      paths:
      - path:
      # - path: /geosearch/?(.*)
        backend:
          serviceName: elasticsearch
          servicePort: 9200
